infra/kubernetes/policies/nexuspay-allowed-repos.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: nexuspay-prod-approved-registries
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet"]
    namespaces:
      - nexuspay-prod
  parameters:
    prefixes:
      - acrname.azurecr.io/nexuspay/
