infra/kubernetes/policies/nexuspay-required-resources.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredResources
metadata:
  name: nexuspay-prod-needs-limits
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet"]
    namespaces:
      - nexuspay-prod
  parameters:
    requiredFields:
      - requests
      - limits
